--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,5 +2,5 @@
     <string name="app_name">Digit Recognizer</string>
     <string name="scan">Scan</string>
     <string name="cd_digit_image">Digit image</string>
-    <string name="data">Data</string>
+    <string name="stats">Stats</string>
 </resources>
